# Sales_Agent

./: leads.csv  leads1.csv  leads2.csv  leads4.csv  leads_0fe308e2.csv  leads_57b4a9d091e9402caa50868f2e141b26.csv  leads_7354e4bf61494b999109f472d8f69bae.csv  leads_7e1ac89e.csv  leads_8cb6040660844ea3bd2dd004bb185849.csv  leads_95d4e4ca243547d2a60df1d3dae66ba0.csv  leads_964f8ecb.csv  leads_99f8bca1.csv  leads_a21d65cc808a45a7b0b0fdb845dbbe95.csv  leads_b6b8abe3d2024c828c765251917213e9.csv  leads_e703e99529724b449cc8d402a4cee9d2.csv  main.py  pyproject.toml  requirements.txt  test.py  tools.py
agent/: csv_agent.py  orchestator_Agent.py  scraper_agent.py  search_agent.py  validator_agent.py
