[project]
name = "sales"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.14.2",
    "lxml>=6.0.2",
    "openai>=2.8.0",
    "openai-agents>=0.5.1",
    "python-dotenv>=1.2.1",
    "regex>=2025.11.3",
    "requests>=2.32.5",
]
