[project]
name = "sales-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "apify-client>=2.3.0",
    "beautifulsoup4>=4.14.2",
    "google-search>=1.1.1",
    "googlesearch-python>=1.3.0",
    "lxml>=6.0.2",
    "openai-agents>=0.5.1",
    "outscraper>=5.9.2",
    "playwright>=1.56.0",
    "python-dotenv>=1.2.1",
    "regex>=2025.11.3",
    "requests>=2.32.5",
    "scrapfly-sdk>=0.8.23",
    "selenium>=4.38.0",
    "serpapi>=0.1.5",
    "setuptools==65.5.0",
    "undetected-chromedriver>=3.5.5",
    "webdriver-manager>=4.0.2",
]
